--- a/i18n/sf_admin.es.xml
+++ b/i18n/sf_admin.es.xml
@@ -41,6 +41,10 @@
         <source>go</source>
         <target>ok</target>
       </trans-unit>
+      <trans-unit>
+        <source>Back to list</source>
+        <target>Volver a la lista</target>
+      </trans-unit>
 
       <!-- Filters -->
       <trans-unit>
