--- a/i18n/sf_admin.fr.xml
+++ b/i18n/sf_admin.fr.xml
@@ -81,6 +81,10 @@
         <source>[0] no result|[1] 1 result|(1,+Inf] %1% results</source>
         <target>[0] aucun résultat|[1] 1 résultat|(1,+Inf] %1% résultats</target>
       </trans-unit>
+      <trans-unit>
+        <source>Back to list</source>
+        <target>Retour à la liste</target>
+      </trans-unit>
 
       <!-- Pagination -->
       <trans-unit>
